  pcre(3). It mentions that patterns are case sensitive and (?i) can be
  used for caseless matching.
- Documentation: the "bad weather" example in filters.example was fixed,
  and prominent notices added that it's not meant to be used as is were
  placed in that file, filterfile(5) and leafnode(8).
  Found and debugged by Manfred Lotz and Robert Grimm.

20080904a: Changes since 20080624a:
- Feature/fix: fetchnews -S <server> can now be specified more than once, to
  query some servers. Patch courtesy of Robert Grimm <rob@robgri.de>.
- Feature/fix: fetchnews -S <server>:<:port> syntax now supported.
  Patch courtesy of Robert Grimm <rob@robgri.de>.

20080624a: Changes since 20070602a:
- Change: Improve logging of feedtype (when posting).

20070602a: Changes since 20070108a:
- Bugfix: applyfilter no longer refuses to run in dryrun mode.
  Reported by Clemens Fischer. Broken since 2005-01-05 when
  applyfilter's -C option was removed.
- Change: Improve some applyfilter error messages.

20070108a: Changes since 20070101a:
- Bugfix: do not crash when using inverted newsgroup[s] = !... matches
  in filter files.  Reported by Wolfgang Bauer.
- Portability: Support compilation on systems with non-empty EXEEXT.

20070101a: Changes since 20061204a:
- Documentation: document no_direct_spool in leafnode(8). Found by
  Reiner Steib.
- Rebuild configure with autoconf 2.60 (not documented in released tarball).

20061204a: Changes since 20061010a:
- Bugfix: use proper prototype for mastring.h's mastr_cat.
  Reported by Georg Schwarz.
- Bugfix: if none of the upstream articles can be fetched for a certain
  group, do NOT skip to the next server. Found by Martin Brunzel.

20061010a: Changes since 20060831a:
- Documentation: in leafnode(8)'s section on groupexpire, list the
  precedence information. Found by Clemens Fischer.

20060831a: Changes since 20060826a:
- Change: an empty mail address in the moderators file means "no