@@ -4,7 +4,7 @@
 #include "system.h"
 
 extern void arc4random_stir (void);
-extern void arc4random_addrandom (u_char *dat, int datlen);
+extern void arc4random_addrandom (unsigned char *dat, int datlen);
 extern uint32_t arc4random (void);
 
 #endif
